[update] page cateogry post, update css for tags

--- a/wp-content/themes/Travelo-child/style.css
+++ b/wp-content/themes/Travelo-child/style.css
@@ -68,3 +68,6 @@ a.button {
     text-transform: inherit;
     font-size: 1em;
 }
+.image-box.style3 .details .box-title{
+    margin-bottom: 5px;
+}
