--- a/wp-content/themes/Travelo-child/style.css
+++ b/wp-content/themes/Travelo-child/style.css
@@ -148,3 +148,10 @@ a.button {
         padding-left: 20px
     }
 }
+
+.backtotop{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 10px;
+}
