--- a/wp-content/themes/Travelo-child/style.css
+++ b/wp-content/themes/Travelo-child/style.css
@@ -156,5 +156,6 @@ a.button {
     padding: 10px;
 }
 .search-results-title {
-    line-height: 4em;
+    border-bottom:none;
+    padding-top: 6px;
 }
