--- a/wp-content/themes/Travelo-child/style.css
+++ b/wp-content/themes/Travelo-child/style.css
@@ -238,3 +238,13 @@ a.button {
 #main-menu ul.menu > li:hover > a, .chaser ul.menu > li:hover > a {
 	color: #fff;
 }
+@media (max-width: 767px){
+    .tour-detail-page.container,
+    .tour-ralated.container{
+        padding:0;
+    }
+    .border-box{
+        border: none;
+    }
+
+}
