--- a/wp-content/themes/Travelo-child/style.css
+++ b/wp-content/themes/Travelo-child/style.css
@@ -280,3 +280,32 @@ a.button {
 .blog-infinite .post .entry-title, .single .post .entry-title {
     margin-left: 50px;
 }
+#header.style1 .contact-details {
+    margin-right: 30px;
+}
+.logo-left {
+    width: 50px;
+    float: left;
+}
+.embed-responsive .embed-responsive-item, .embed-responsive embed, .embed-responsive iframe, .embed-responsive object, .embed-responsive video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    border: 0;
+}
+.video-detail {
+    margin-bottom: 30px;
+}
+.embed-responsive-16by9 {
+    padding-bottom: 56.25%;
+}
+.embed-responsive {
+    position: relative;
+    display: block;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+}
