--- a/wp-content/themes/Travelo-child/style.css
+++ b/wp-content/themes/Travelo-child/style.css
@@ -310,3 +310,7 @@ a.button {
     margin-bottom: 30px;
 }
 
+.tab-container.style1 ul.tabs li a.active {
+    color: #fff;
+    background: #77B7E7;
+}
